# diffEngine

./: .gitignore  CMakeLists.txt  README.md
scripts/: create_issues.sh
src/: example.cpp
tests/: test_main.cpp
